fix: increase legibility

--- a/src/server/static/style_legacy.css
+++ b/src/server/static/style_legacy.css
@@ -22,7 +22,7 @@ main {
 }
 
 footer {
-  color: #5f676e;
+  color: #93999e;
   text-align: center;
 }
 
@@ -49,7 +49,7 @@ h1 {
 
 .feature {
   display: inline-block;
-  width: 33%;
+  width: 32%;
 
   padding-top: 1.5rem;
 
@@ -57,16 +57,16 @@ h1 {
 }
 
 .feature-icon {
-  font-size: 2rem;
+  font-size: 2.0rem;
 }
 
 .feature-description {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   font-weight: 300;
 }
 
 .feature-value {
-  font-size: 2.5rem;
+  font-size: 3.0rem;
   font-weight: 500;
 
   margin-top: 0;
